--- a/package.json
+++ b/package.json
@@ -2,7 +2,9 @@
   "dependencies": {
     "body-parser": "^1.18.2",
     "express": "^4.16.2",
+    "htmlclean": "^3.0.5",
     "node-readability": "^3.0.0",
+    "sanitize-html": "^1.16.3",
     "valid-url": "^1.0.9"
   }
 }
